--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "aurelia-skeleton-navigation",
-  "version": "0.14.0",
-  "description": "A starter kit for building a standard navigation-style app with Aurelia.",
-  "keywords": [
-    "aurelia",
-    "navigation",
-    "skeleton"
-  ],
-  "homepage": "http://aurelia.io",
+  "name": "WebHealthMonitor",
+  "version": "0.1.0",
+  "description": "A Web UI that monitors services that implement our REST healthcheck interface",
+  "keywords": [],
+  "homepage": "https://github.com/dtinteractive/WebHealthMonitor",
   "bugs": {
-    "url": "https://github.com/aurelia/skeleton-navigation/issues"
+    "url": "https://github.com/dtinteractive/WebHealthMonitor/issues"
   },
-  "license": "MIT",
-  "author": "Rob Eisenberg <rob@bluespire.com> (http://robeisenberg.com/)",
+  "license": "NONE",
+  "author": "Stephen England and Shannon Barrett",
   "main": "dist/commonjs/index.js",
   "repository": {
     "type": "git",
-    "url": "http://github.com/aurelia/skeleton-navigation"
+    "url": "https://github.com/dtinteractive/WebHealthMonitor.git"
   },
   "devDependencies": {
     "aurelia-tools": "^0.1.3",
